tests/ui/diagnostic-width/long-span.shortest.stderr
error[E0308]: mismatched types
  --> $DIR/long-span.rs:7:15
   |
LL | ... = [0, 0, 0......
   |       ^^^^^^^^...^^ expected `u8`, found `[{integer}; 1680]`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
